fix(Operation/JobsMonitor): better condition of visibility [YTFRONT-4600]

--- a/packages/ui/src/ui/components/Loader/Loader.scss
+++ b/packages/ui/src/ui/components/Loader/Loader.scss
@@ -4,5 +4,6 @@
 
     &_centered {
         margin: auto;
+        text-align: center;
     }
 }
